# https://setuptools.readthedocs.io/en/latest/userguide/declarative_config.html

[metadata]
name    = ratarmountcore
version = attr: ratarmountcore.version.__version__

description   = Random Access Read-Only Tar Mount Library
url           = https://github.com/mxmlnkn/ratarmount/ratarmountcore
author        = Maximilian Knespel
author_email  = mxmlnkn@github.de
license       = MIT
license_files = LICENSE
classifiers   =
    License :: OSI Approved :: MIT License
    Development Status :: 4 - Beta
    Natural Language :: English
    Operating System :: MacOS
    Operating System :: Unix
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: System :: Archiving

long_description = file: README.md,
long_description_content_type = text/markdown

[options]
packages = ratarmountcore
install_requires =
    dataclasses; python_version < "3.7.0"
    importlib-metadata; python_version < "3.8.0"


[options.extras_require]
full =
    indexed_bzip2 >= 1.3.1, < 2.0
    indexed_gzip >= 1.6.3, < 2.0
    rarfile ~= 4.0
    python-xz ~= 0.4.0
    indexed_zstd >= 1.3.1, < 2.0; sys_platform=="darwin"
    indexed_zstd >= 1.2.2, < 2.0; platform_system!="Windows"

bzip2 = indexed_bzip2 >= 1.3.1, < 2.0
gzip  = indexed_gzip >= 1.6.3, < 2.0
rar   = rarfile ~= 4.0
xz    = python-xz ~= 0.4.0
zip   =
zstd  =
    indexed_zstd >= 1.3.1, < 2.0; sys_platform=="darwin"
    indexed_zstd >= 1.2.2, < 2.0; platform_system!="Windows"
